[gd_scene load_steps=3 format=3 uid="uid://c165arqp73p1k"]

[ext_resource type="Script" path="res://addons/cyclops_level_builder/snapping/snapping_system_grid_properties_editor.gd" id="1_jva1e"]
[ext_resource type="PackedScene" uid="uid://cphtpklx81l3w" path="res://addons/cyclops_level_builder/controls/vector3_edit.tscn" id="2_beo4d"]

[node name="snapping_system_grid_properties" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jva1e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="check_use_subdiv" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Use Subdivisions"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Subdivisions"

[node name="spin_subdiv" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 16.0
value = 10.0
rounded = true
allow_greater = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Power of 2 Scale"

[node name="spin_power_of_two" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
min_value = 1.0
max_value = 16.0
value = 10.0
rounded = true
allow_greater = true

[node name="HBoxContainer3" parent="VBoxContainer" instance=ExtResource("2_beo4d")]
layout_mode = 2
